# bookt-domain

./: .gitignore  .pre-commit-config.yaml  local.requirements.in  local.requirements.txt  pyproject.toml  setup.cfg
bookt-domain/: .env
bookt-domain/service/: event_handlers.py
bookt-domain/src/service/: command_handlers.py
bookt_domain.egg-info/: PKG-INFO  SOURCES.txt
model/: account.py  authentication.py
service/: commands.py
src/bookt-domain/model/: __init__.py
src/bookt_domain/model/: __init__.py  account.py  authentication.py  command_handlers.py  commands.py  event_handlers.py  tenant.py  tenant_email_validator.py  tenant_registrar.py  tenant_registration.py  tenant_registratrar.py  user.py  user_email_validator.py  user_registrar.py  user_registration.py
src/bookt_domain/service/: command_handlers.py  event_handlers.py
src/test/esa_domain/: test_register_user_handler.py
test/: conftest.py
test/unit/aggregates/tenant/: test_tenant_email_validator.py  test_tenant_email_verifier.py  test_tenant_registrar.py
test/unit/aggregates/user/: test_user_authenticator.py  test_user_email_validator.py  test_user_email_verifier.py  test_user_password_manager.py  test_user_registrar.py
test/unit/handlers/: test_tenant_registration.py
test/unit/handlers/tenant/: test_tenant_email_valdation.py  test_tenant_email_validator_creation.py  test_tenant_email_verification.py  test_tenant_email_verifier_creation.py  test_tenant_registration.py
test/unit/handlers/user/: test_adding_eligible_tenant_to_user_registrar.py  test_creating_user_password_manager.py  (+7 more)
(+10 files in other folders)
