[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "bookt-domain"
version = "0.0.0"
dependencies = [
    "bcrypt",
    "cosmos @ git+https://github.com/bgswe/cosmos",
    # -----
    # These might be needed, but likely used elsewhere
    # when implementing authN/authZ
    # -----
    # PyJWT
    # pyjwt[crypto]
]
